--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,12 @@
 		<link rel="stylesheet" href="css/style.css"/>
 	</head>
 	<body>
-		<h1>Aqui vamos a hacer un blog post</h1>
-		<p>Y este es el parrafo de inicio</p>
+		<div id="container">
+			<div id="post">
+				<h1>Aqui vamos a hacer un blog post</h1>
+				<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas.</p>
+			</div>
+		</div>
 	</body>
 </html>
 
