--- a/blogpost.html
+++ b/blogpost.html
@@ -7,13 +7,14 @@
 		<div id="container">
 			<div id="cabecera">
 				Hyperblog
-				<span id="tagline"> Tu blog de confianza`</span>
+				<span id="tagline"> Tu blog main</span>
 			</div>
 			<div id="post">
 				<h1>Aqui vamos a hacer un blog post</h1>
 				<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas.</p>
 				<p>
 				Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtuube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... porr ahora.</p>
+				<p>Suscribete y dale like</p>
 			</div>
 		</div>
 	</body>
